# drone_software

./: CMakeLists.txt  README.md
Documentation/: Untitled Diagram.drawio  msc_sensors_task
Documentation/software_architecture/: msc_pid_task.drawio  msc_receiver_task.drawio  msc_sensors_task.drawio  software_architecture.drawio
software/: LinkerScript.ld
software/app/inc/: FreeRTOSConfig.h  board.h  stm32f4xx_conf.h  target.h
software/app/src/: board.c  main.c
software/startup/: startup_stm32.s
